mehari/src/annotate/seqvars/consequence/snapshots/mehari__annotate__seqvars__consequence__logic__test__annotate_snv_brca1_csq@17-41199659-G-T.snap
---
source: mehari/src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: T
  consequences:
    - splice_donor_variant
    - coding_transcript_intron_variant
  putative_impact: high
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007294.4
  feature_biotype:
    - coding
  feature_tags:
    - ref_seq_select
    - mane_select_backport
  rank:
    ord: 22
    total: 22
  hgvs_g: g.41199659G>T
  hgvs_n: n.5580+1C>A
  hgvs_c: c.5467+1C>A
  hgvs_p: p.?
  cdna_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: -1
  strand: -1
  messages: ~
